add file upload and file delete functions and add an admin dashboard project
