# backend/src/controllers/categoryController.ts
@@ -1,7 +1,7 @@
 import {Request, Response} from "express";
 import {Category} from "../models/category";
 import {NotFoundError} from "../errors/not-found-error";
-import {ItemVisibility, UserRole} from "../helpers/constants";
+import {UserRole} from "../helpers/constants";
 import {NotAuthorizedError} from "../errors/not-authorized-error";
 import {BadRequestError} from "../errors/bad-request-error";
 
@@ -28,11 +28,6 @@ export const fetchCategories = async (req: Request, res: Response) => {
     res.send(categories)
 }
 
-export const visibleCategories = async (req: Request, res: Response) => {
-    const categories = await Category.find({visible: ItemVisibility.ACTIVE})
-    res.send(categories)
-}
-
 export const fetchCategory = async (req: Request, res: Response) => {
     const category = await checkCategory(req)
     if (!category) throw new NotFoundError('Category')
@@ -45,12 +40,9 @@ export const updateCategory = async (req: Request, res: Response) => {
 
     if (!category) throw new NotFoundError('Category')
 
-    if (req.user!.role !== UserRole.ADMIN) throw new NotAuthorizedError()
-
-    if (req.body.name === category.name) throw new BadRequestError('Category name already exists')
+    if (req.body.name === category.name) throw new BadRequestError('Category already exists')
 
     category.name = req.body.name
-    category.visible = req.body.visible
     await category.save()
     return res.send(category)
 }
@@ -59,10 +51,7 @@ export const deleteCategory = async (req: Request, res: Response) => {
     const category = await checkCategory(req)
     if (!category) throw new NotFoundError('Category')
 
-    if (req.user!.role !== UserRole.ADMIN) throw new NotAuthorizedError()
-
-    category.visible = ItemVisibility.INACTIVE
-    await category.save()
+    await Category.findOneAndDelete(category.id)
 
     return res.status(204).send({
         message: 'Category deleted'
