# backend/src/routes/productRoutes.ts
@@ -1,11 +1,14 @@
 import express from "express";
-import {addProduct, fetchProducts} from "../controllers/productController";
-import {currentUser} from "../middlewares/current-user";
+import {addProduct, deleteProduct, fetchProduct, fetchProducts, updateProduct} from "../controllers/productController";
 import {requireAuth} from "../middlewares/require-auth";
+import {isAdmin} from "../middlewares/is-admin";
 
 const router = express.Router()
 
 router.get('/products', fetchProducts)
-router.post('/products', currentUser, requireAuth, addProduct)
+router.post('/products', requireAuth, isAdmin, addProduct)
+router.get('/products/:slug', fetchProduct)
+router.patch('/products/:slug', requireAuth, isAdmin, updateProduct)
+router.delete('/products/:slug', requireAuth, isAdmin, deleteProduct)
 
 export {router as productRouter}
