# backend/swagger.yaml
@@ -41,12 +41,22 @@ components:
           type: string
         slug:
           type: string
-        visible:
-          type: string
       example:
         name: Kitchen Ware
         slug: kitchen-ware
-        visible: ACTIVE
+    Section:
+      type: object
+      properties:
+        name:
+          type: string
+        slug:
+          type: string
+        categoryId:
+          type: string
+      example:
+        name: Microwave
+        slug: microwave
+        categoryId: random_id
     Product:
       type: object
       properties:
@@ -56,10 +66,48 @@ components:
           type: string
         stock:
           type: number
-      example:
-        name: Samsung A50
-        slug: samsung-a50
-        stock: 20
+        price:
+          type: number
+        section:
+          type: string
+        brand:
+          type: string
+        description:
+          type: string
+        images:
+          type: array
+          items:
+            type: string
+        createdBy:
+          type: string
+    ProductBody:
+      type: object
+      properties:
+        name:
+          type: string
+        price:
+          type: number
+        stock:
+          type: number
+        description:
+          type: string
+        section:
+          type: string
+        brand:
+          type: string
+        images:
+          type: array
+          items:
+            format: binary
+            type: file
+      required:
+        - name
+        - price
+        - stock
+        - description
+        - section
+        - brand
+        - images
 
 paths:
   /auth/signup:
@@ -81,6 +129,7 @@ paths:
                   type: string
                 email:
                   type: string
+                  format: email
                 password:
                   type: string
               example:
@@ -109,6 +158,7 @@ paths:
               properties:
                 email:
                   type: string
+                  format: email
                 password:
                   type: string
               example:
@@ -304,22 +354,6 @@ paths:
                 items:
                   $ref: '#/components/schemas/Category'
 
-  /categories/all:
-    get:
-      tags:
-        - categories
-      summary: Get all Categories
-      description: Retrieves a list of all the available categories in the system
-      responses:
-        200:
-          description: A list of all category JSON objects in an array
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Category'
-
   /categories/{slug}:
     get:
       tags:
@@ -366,11 +400,8 @@ paths:
               properties:
                 name:
                   type: string
-                visible:
-                  type: string
               example:
                 name: Laptops
-                visible: ACTIVE
       responses:
         200:
           description: Category updated successfully
@@ -405,7 +436,156 @@ paths:
         404:
           description: Not found
 
+  /sections:
+    post:
+      tags:
+        - sections
+      summary: Add Section
+      description: Add a new Section
+      security:
+        - cookieAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                categoryId:
+                  type: string
+              example:
+                name: Microwave
+                categoryId: random_key
+      responses:
+        201:
+          description: Section created successfully
+        400:
+          description: Bad request
+        401:
+          description: Unauthorized request
+
+    get:
+      tags:
+        - sections
+      summary: Get Sections
+      description: Retrieves a list of available sections
+      responses:
+        200:
+          description: A list of available sections
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Section'
+
+  /sections/{slug}:
+    get:
+      tags:
+        - sections
+      summary: Get a Section
+      description: Retrieves a section based on the slug
+      parameters:
+        - in: path
+          name: slug
+          required: true
+          description: Section slug
+          schema:
+            type: string
+      responses:
+        200:
+          description: A category in the format of a JSON object
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Section'
+        404:
+          description: Not found
+
+    patch:
+      tags:
+        - sections
+      summary: Updates a Section
+      description: Update a specific section based on the slug provided
+      security:
+        - cookieAuth: [ ]
+      parameters:
+        - in: path
+          name: slug
+          required: true
+          description: The Section slug
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+              example:
+                name: Microwave
+      responses:
+        200:
+          description: Section updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Section"
+        401:
+          description: Unauthorized request
+        404:
+          description: Not found
+
+    delete:
+      tags:
+        - sections
+      summary: Deletes a Section
+      description: Delete a specific section based on the section slug
+      security:
+        - cookieAuth: [ ]
+      parameters:
+        - in: path
+          name: slug
+          required: true
+          description: The section slug
+          schema:
+            type: string
+      responses:
+        204:
+          description: Section deleted successfully
+        401:
+          description: Unauthorized request
+        404:
+          description: Not found
+
   /products:
+    post:
+      tags:
+        - products
+      summary: Add a product
+      description: Add a new product
+      security:
+        - cookieAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              $ref: '#/components/schemas/ProductBody'
+      responses:
+        201:
+          description: Product created successfully
+        400:
+          description: Bad request
+        401:
+          description: Unauthorized request
+
     get:
       tags:
         - products
@@ -420,3 +600,83 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Product'
+
+  /products/{slug}:
+    get:
+      tags:
+        - products
+      summary: Get a product
+      description: Retrieves a product based in the slug provided
+      parameters:
+        - in: path
+          name: slug
+          required: true
+          description: Product slug
+          schema:
+            type: string
+      responses:
+        200:
+          description: A product in the format of a JSON object
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Product'
+        404:
+          description: Not found
+
+    patch:
+      tags:
+        - products
+      summary: Updates a Product
+      description: Update a specific product based on the product slug provided
+      security:
+        - cookieAuth: [ ]
+      parameters:
+        - in: path
+          name: slug
+          required: true
+          description: The Product slug
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              $ref: '#/components/schemas/ProductBody'
+      responses:
+        200:
+          description: Product updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Product"
+        401:
+          description: Unauthorized request
+        404:
+          description: Not found
+
+    delete:
+      tags:
+        - products
+      summary: Deletes a Product
+      description: Delete a specific product based on the product slug provided
+      security:
+        - cookieAuth: [ ]
+      parameters:
+        - in: path
+          name: slug
+          required: true
+          description: The Product slug
+          schema:
+            type: string
+      responses:
+        200:
+          description: Product deleted successfully
+        401:
+          description: Unauthorized request
+        404:
+          description: Not found
+        500:
+          description: Bad request
